monticore-generator/src/test/resources/cocos/invalid/A4013/A4013.mc4
/* (c) https://github.com/MontiCore/monticore */

package cocos.invalid.A4013;

grammar A4013 {
  A extends B;

  astrule A astextends C;

  B;

  C;

}
